<resources>
    <string name="app_name">I-DARE</string>

    <string name="permission_rationale">Please grant location permission to use the app.</string>
    <string name="permission_denied_explanation">You have not granted location permission. To use the app please allow location permission.</string>
    <string name="title_alert_no_intenet">No internet</string>
    <string name="msg_alert_no_internet">Please make sure that you have active internet connection.</string>
    <string name="no_google_playservice_available">Google Play Service not found. Please install it.</string>
    <string name="msg_location_service_not_started">Location Tracking Not Started</string>
    <string name="msg_location_service_started">Location Tracking Started</string>
    <string name="btn_label_refresh">Refresh</string>

    <string name="make_passive">MAKE PASSIVE</string>
    <string name="passive_mode_description">Passive mode disables location services in this app to conserve battery.</string>
    <string name="passive_mode_message">Your security app is in Passive mode and will need to be active to send real time location details</string>
    <string name="welcome_title">Welcome <b>%1$s</b></string>
    <string name="make_active_btn_help">Once active, you can alert others of your situation and location to get timely help.</string>
    <string name="active_mode_message">Your security app is in Active mode. Shake the phone or use the button to alert others in case of emergency.</string>
    <string name="call_nearest_police_station">Call nearest police station</string>
    <string name="enter_passcode_to_make_passive">Enter your passcode to make passive.</string>
    <string name="forgot_passcode">Forgot Passcode?</string>
    <string name="welcome_to_idare">Welcome to I-DARE</string>
    <string name="otp_text">I-DARE will send an SMS message to verify your phone number. Please enter your phone number:</string>
    <string name="password_text">Please enter your password.</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_confirmation_message">We will be verifying the phone number : \n\n<b>%1$s</b> \n\nIs this OK, or would you like to edit the number?</string>
    <string name="btn_edit">EDIT</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="enter_otp_text">You have received a 6 digit pin via SMS. Please enter to verify your number.</string>
    <string name="verify">Verify</string>
    <string name="send_verification_pin">Send verification pin</string>
    <string name="str_continue">Continue</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="btn_logout">LOG OUT</string>
    <string name="google_map_api_key">AIzaSyDzp46HCRv-FqeIhjIJ6QpCWfP96CbZYaU</string>
    <string name="no_location_detected">Unable to fetch location. Make sure location services are enabled on the device.</string>
    <string name="name">Name*</string>
    <string name="email">Email*</string>
    <string name="alternate_number">Alternate Number</string>
    <string name="password">Password*</string>
    <string name="password_hint">password</string>
    <string name="save">Save</string>
    <string name="make_active">Make Active</string>
    <string name="pick_image_intent_text">Select</string>
    <string name="profile">PROFILE</string>
    <string name="profile_pic">PROFILE PIC</string>
    <string name="progress_bar_message">Loading</string>
    <string name="positive_button">Ok</string>
    <string name="error_title">Error</string>
    <string name="network_error_message">Please check your internet/network connection</string>
    <string name="error_message">Something went wrong!</string>
    <string name="active_mode_message_from_passive">"The active mode wants to access your location."</string>
    <string name="invalid_credentials">Please enter valid password</string>

    <!--Navigation Items-->
    <string name="active_profile">HOME</string>
    <string name="notification">NOTIFICATIONS</string>
    <string name="core_group">CORE GROUP</string>
    <string name="invite">INVITE TO I-DARE</string>
    <string name="app_tour">APP TOUR</string>
    <string name="donate">CONTRIBUTE/DONATE</string>
    <string name="about_i_dare">ABOUT I-DARE</string>
    <string name="safe_practices">SAFE PRACTICES</string>
    <string name="scope">SCOPE</string>
    <string name="settings">SETTINGS</string>
    <string name="log_out">LOG OUT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="registration">I-DARE</string>
    <string name="search_filters">Search Filters</string>
    <string name="shopping_mall">Shopping Mall</string>
    <string name="police_station">Police Station</string>
    <string name="select_safe_house_msg">Please select your safe houses that you would like to find in the vicinity.</string>
    <string name="add_to_you_core_list_msg">Please enter the phone number of the user you want to add to you core list</string>
    <string name="incomingcall">Incoming Call</string>
    <string name="fakecallname">Home</string>
    <string name="fakecallnumber">8778655676</string>

    <string name="about_val">I-Dare acknowledges the climate of danger and risk, with associated physical violence, that women regularly face in public spaces, in Bangalore. The app facilitates and encourages individual safe practices and organises fearless participation by its women members, to personally, and pro-actively respond to safety alert from any member in distress. The tool is neither comprehensive nor fool-proof, but is a small affirmative step forward to having women reclaim their right to personal public safety, and take collective action in making this so.I-Dare is a voluntary initiative and therefore, no one person or collective of persons shall be held responsible for the functioning, effectiveness or consequences of using this app.</string>
    <string name="scope_val">I-dare is not a law enforcement or a rescue agency (put also in terms and conditions) that can guarantee successful rescue of women in distress. We comprise of a pool of empowered women members, the I-dare users, who volunteer to respond, when possible, to an SOS alert from  any member in their vicinity. The goal is to change the mindset of women from mere victims of the current social circumstances and violence to that of a collective strength which says enough is enough! As memberships increases, so will the efficacy of this app, with sufficient members to alert in vicinity of a potential crime. This app is only a technical facilitator of this process.</string>
    <string name="membership_val">Membership is open only to women by Direct Invitation from an existing I-Dare member. Invitation goes out as a Unique, single-use SMS which is not forwardable and may be used by that number only. The SMS contains a link which takes the person directly to the I-Dare App HOME page where a new member may register.</string>
    <string name="safe_practices_header_val">A martial arts saying:  Best form of self defense is not putting yourself in a situation where you need to defend yourself.</string>
    <string name="safe_prac_passive_title_1"><u>IN PASSIVE MODE : DAILY REMINDERS</u></string>
    <string name="safe_prac_title_2">BE WARNED: ABUSE VIA SOCIAL MEDIA</string>
    <string name="str_arati">Arati</string>
    <string name="about_arati">Arati Chokshi is a retd Astrophysicist, human rights’ activist, with interests &amp; experiences in the fields of natural farming, education, environment protection.</string>
    <string name="str_conceptualisation">CONCEPTUALISATION</string>
    <string name="conceptualisation_val_1">I-dare  emerged out of a deep sense of alarm, fear and impotence at the increasing levels of crimes reported against women,  in public spaces.  It compelled us to respond to this violence, carefully, critically, and strategically, not merely as individual prisoners, future victims, but as courageous, caring, and committed women who are collectively empowered to help themselves and each other in time of need.</string>
    <string name="conceptualisation_val_2">I-dare dreams of a society that is not only safe, and just, but also deliberately caring , to step in  and - Dare.</string>
    <string name="str_funding">Funding</string>
    <string name="funding_val_1">We are not funded. The app uses OSS and our aim is to make the app also freely available in future as OSS.</string>
    <string name="funding_val_2">We rely on funding, however small, from people who agree with our vision.</string>
    <string name="str_contact_us_for">Contact us for:</string>
    <string name="str_arati_chokshi">\@Arati Chokshi</string>
    <string name="contact_1">9945201029</string>
    <string name="contact_2">8028482409</string>
    <string name="contact_email">aratichokshi@gmail.com</string>
    <string name="safe_prac_while_walking_title">While Walking</string>
    <string name="dismiss">Dismiss</string>
    <string name="camera_no_permissions">Need Permission to use camera</string>
    <string name="safe_prac_in_a_cab_title">In A Cab</string>
    <string name="safe_prac_in_an_elevator">In An Elevator</string>
    <string name="safe_prac_active_title">In Active Mode</string>
    <string name="safe_prac_sos_title">In SOS Alert Mode</string>
    <string name="daily_reminders">Daily Reminders</string>
    <string name="no_internet">No Internet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="notification_body">%1$s is in SOS distress and immediately needs your help. Her location is: %2$s, %3$s</string>

</resources>
