<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/active_profile"
            android:title="@string/active_profile" />
        <item
            android:id="@+id/core_group"
            android:title="@string/core_group" />
        <!--<item-->
        <!--android:id="@+id/invite"-->
        <!--android:title="@string/invite" />-->
        <item
            android:id="@+id/safe_practices"
            android:title="@string/safe_practices" />
        <item
            android:id="@+id/app_tour"
            android:title="@string/app_tour" />
        <!--<item-->
        <!--android:id="@+id/donate"-->
        <!--android:title="@string/donate" />-->
        <item
            android:id="@+id/scope"
            android:title="@string/scope" />
        <item
            android:id="@+id/about_i_dare"
            android:title="@string/about_i_dare" />
        <item
            android:id="@+id/settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/log_out"
            android:title="@string/log_out" />
    </group>
</menu>
