<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.opensource.app.idare.viewmodel.EditProfileViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/padding_welcome_text">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user_profile"
                android:layout_width="@dimen/image_height"
                android:layout_height="@dimen/image_weight"
                android:layout_marginBottom="@dimen/margin_linear_layout_elements_app"
                android:elevation="@dimen/image_elevation"
                android:scaleType="centerCrop"
                android:src="@mipmap/female_avatar" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_layer_margin">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:addTextChangedListener="@{viewModel.nameTextChanged()}"
                    android:text="@{viewModel.nameFromEditTExt}"
                    android:inputType="textCapWords"
                    android:maxLength="40" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_layer_margin">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:addTextChangedListener="@{viewModel.emailTextChanged()}"
                    android:text="@{viewModel.emailFromEditText}"
                    android:inputType="textEmailAddress"
                    android:maxLength="40" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_alternate_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_layer_margin">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_alternate_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alternate_number"
                    android:addTextChangedListener="@{viewModel.alternativeNumTextChanged()}"
                    android:text="@{viewModel.alternativeNumFromEditText}"
                    android:inputType="number"
                    android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_layer_margin">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:addTextChangedListener="@{viewModel.passwordTextChanged()}"
                    android:text="@{viewModel.passwordFromEditText}"
                    android:inputType="textPassword"
                    android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_save_profile"
                style="@style/btn_pink_background"
                android:layout_width="@dimen/width_app_btn"
                android:layout_height="wrap_content"
                android:elevation="@dimen/button_elevation"
                android:onClick="@{viewModel.saveClick()}"
                android:enabled="@{viewModel.enableSaveButton}"
                android:text="@string/save"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>
</layout>