<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#565656"
    tools:context="inducesmile.com.androidfakecallapplication.FakeRingingActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/incomingcall"
        android:textColor="@color/idare_white"
        android:textSize="20sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@null"
        android:src="@mipmap/female_avatar" />

    <TextView
        android:id="@+id/chosenfakename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView1"
        android:textColor="@color/idare_white"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/fakecallname" />

    <TextView
        android:id="@+id/chosenfakenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chosenfakename"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="@color/idare_white"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/fakecallnumber" />

    <Button
        android:id="@+id/answercall"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="26dp"
        android:layout_marginLeft="29dp"
        android:text="Accept"
        android:background="@drawable/btn_selector_round" />

    <Button
        android:id="@+id/rejectcall"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:text="Reject"
        android:layout_alignBottom="@+id/answercall"
        android:layout_alignParentRight="true"
        android:layout_marginRight="32dp"
        android:contentDescription="@null"
        android:background="@drawable/btn_selector_round" />

</RelativeLayout>
